# data-talk

./: README.md  data_talk.py  example_usage.ipynb  pyproject.toml  testing.py
src/: common.py  data_loader.py  invoke.py  lang_chain.py  llama_chain.py
src/agents/langgraph/: example_use.ipynb  sql_gen.py
src/agents/pydanticai/: example_use.ipynb  sql_gen.py
src/chains/: example_usage.ipynb  lang_chain.py  llama_chain.py
src/data/: data_loader.py
